--- a/styles.css
+++ b/styles.css
@@ -4,25 +4,29 @@
 		-khtml-user-select: none;
 		-webkit-user-select: none;
 		user-select: none;
-		color: rgb(82, 92, 163);
+		color: rgb(44, 42, 41);
 
+  }
+  @font-face {
+    font-family: Pragmatica;
+	src: url('PragmaticaSlab-Book.ttf');
   }
 
   html {
-	background-color: rgb(230, 237, 249);
-	height: 99%;
-	width:  99%;
+	background-color: rgb(255, 255, 255);
+	height: 100%;
+	width:  100%;
 
 	margin: 0;
   }
 
   body {
 	margin: 0 auto 10%;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Pragmatica, Arial, Helvetica, sans-serif;
 	text-align: center;
 
 
-  }
+  }/*
   #top-margin{
 	  position: fixed;
 	  z-index: 1000;
@@ -37,35 +41,36 @@
 	width: 100vw;
 	height: 40px;
 	background: rgb(73,93,163);
-}
+}*/
   #logo-box{
-	top: 60px;
+	top: 2vh;
 
 	position: absolute;
 	  width: 100%;
-	  height: 5vh;
+	  height: 7vh;
 	  background-color: white;
   }
   #logo {
 	position: absolute;
 	z-index: 100;
 	left: 30px;
-	height: 5vh;
+	height: 7vh;
 	fill: white;
   }
   p{
 	  margin: 5px;
   }
   a{
-	  color: black;
+	  color: rgb(44, 42, 41);
   }
   .quiz-box {
 	  position: relative;
-	  top: 15vh;
-	  margin: auto auto 100px;
+	  top: 10vh;
+	  margin: auto auto 0px;
 	  display: none;
 
 	  height: auto;
+	  background-color: #f5f5f5
   }
   h1 {
 	  text-align: left;
@@ -80,7 +85,6 @@
   .quiz-img {
 	  width: 60%;
 	  margin: 5% auto 2%;
-	  border: 1px solid black;
  }
 .free-space{
 	margin-right:28%;
@@ -120,7 +124,7 @@
 	 height: auto;
 	 padding: 10px 30px 10px;
 	 margin: 60vh 0 20px auto;
-	 background-color: rgb(73,93,163);
+	 background-color: rgb(0,125,186);
 
 	 background-size: contain;
 	 background-position: center;
@@ -158,7 +162,7 @@
   #email-text{
 	left: 40%;
 	width: 70%;
-	border: 2px solid rgb(0, 87, 182);
+	border: 2px solid rgb(0,125,186);
 	border-radius: 6px;
 	padding: 10px;
   }
@@ -167,8 +171,8 @@
   #email-button{
 	left: 86%;
 	width: 18%;
-	border: 2px solid rgb(0, 87, 182);
-	background-color: rgb(0, 87, 182);
+	border: 2px solid rgb(0,125,186);
+	background-color: rgb(0,125,186);
 	background-image: url("images/send-button.png");
 	background-position: center;
 	background-size: contain;
